--- a/app/src/main/res/layout/activity_pump.xml
+++ b/app/src/main/res/layout/activity_pump.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DrinkActivity">
+    tools:context=".PumpActivity">
 
     <ListView
-        android:id="@+id/drinkView"
+        android:id="@+id/pumpView"
         android:layout_width="368dp"
         android:layout_height="415dp"
         android:layout_marginStart="8dp"
@@ -21,12 +21,15 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drinkView"
-        tools:layout_editor_absoluteX="280dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pumpView" />
 
     <View
         android:id="@+id/divider3"
@@ -36,7 +39,7 @@
         android:layout_marginBottom="8dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drinkView"
+        app:layout_constraintTop_toBottomOf="@+id/pumpView"
         app:layout_constraintVertical_bias="0.088"
         tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
