--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="116dp"
         android:text="TextView"
-        android:textSize="28sp"
+        android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/PumpName"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +24,8 @@
         android:layout_marginStart="256dp"
         android:layout_marginTop="28dp"
         android:text="TextView"
-        android:textSize="28sp"
+        android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/DrinkName"
